# fnx

./: .gitignore  .goreleaser.yaml  Cargo.toml  Meta.yaml  Python_Setup_Twine_fdn.sh  README.adoc  README.html  README.md  README.rst  UFn.py  UFn.sh  UFn_ipynb.ipynb  build.rs  conda-bld-upld-fdn.sh  conda-bld-upld-fnx.sh  conda-build-and-upload-fnx.sh  conda-build-and-upload-ufdn.sh  conda_bld_upld_fdn.sh  fdnconfig.proto  fdnrecord.proto  go.mod  go.sum  main.go  meta.yaml  pyproject.toml  python-setup-twine-fdn.sh  requirements.txt  setup.py
.github/workflows/: clippy_check.yml  release.yml
UFn/: UFn.py  UFn_ipynb.ipynb  config.py  ucrypt.py  udb.py  utils.py
UFn/data/: CharDictionary.pkl  KeepOriginalList.pkl  LowerCaseWordSet.pkl
UFn/data/rd/: CNSH_ONCrypt_dict_20210427103721459942.pkl  CNSH_ONCrypt_dict_20210427112446791238.pkl  CNSH_ONCrypt_dict_20210427112446948313.pkl  CNSH_ONCrypt_dict_20210427112446996693.pkl  CNSH_ONCrypt_dict_20210427112447094469.pkl  CNSH_ONCrypt_dict_20210427112551355124.pkl  CNSH_ONCrypt_dict_20210427112551462914.pkl  (+13 more)
UFn/rd_data/: CNSH_ONCrypt_dict_20210427103721409292.pkl  CNSH_ONCrypt_dict_20210427112446843392.pkl  CNSH_ONCrypt_dict_20210427112446899376.pkl  CNSH_ONCrypt_dict_20210427112447045409.pkl  CNSH_ONCrypt_dict_20210427112551406965.pkl  CNSH_ONCrypt_dict_20210427112551512960.pkl  CNSH_ONCrypt_dict_20210427112551561421.pkl  CNSH_ONCrypt_dict_20210427112551658520.pkl  CNSH_ONCrypt_dict_20210427145918478733.pkl  CNSH_ONCrypt_dict_20210428101454983041.pkl  CNSH_ONCrypt_dict_20210428101455084067.pkl  CNSH_ONCrypt_dict_20210428160810130725.pkl  CNSH_ONCrypt_dict_20210428161334791871.pkl  CNSH_ONCrypt_dict_20210428161334842344.pkl  CNSH_ONCrypt_dict_20210428161334940315.pkl  CNSH_ONCrypt_dict_20210428161334989186.pkl  CNSH_ONCrypt_dict_20210428161335184425.pkl  CNSH_ONCrypt_dict_20210428163908905915.pkl  rd.db
cmd/: cfg.db  config.go  fdncfg  mv.go  notwin.go  root.go  root_test.go  win.go
config/: requirements.txt
data/: CharDictionary.pkl  CharDictionary_20210302.pkl  CharDictionary_20210308.pkl  IgnoredDirectoryKeyList.pkl  IgnoredDirectoryKeyList_20210302.pkl  KeepOriginalList.pkl  LowerCaseWordSet.pkl  LowerCaseWordSet_20210302.pkl  LowerCaseWordSet_20210412.pkl  TerminologyDictionary.pkl  TerminologyDictionary_20210302.pkl
db/: fdncfg.go  fdncfg_test.go  fdnrd.go  fdnrd_test.go
docs/source/: conf.py  index.rst
fdn/: __init__.py  __main__.py
fdn/fdnlib/: fdncli.py  fdnutils.py
fnx/: __init__.py
fnx/fnxlib/: fnxcfg.py  fnxcli.py  udb.py  utils.py
pb/: fdnconfig.pb.go  fdnrecord.pb.go
src/: lib.rs  main.rs
src/utils/: db.rs  enc_dec.rs  mod.rs  scmp.rs
tests/: context.py  fnx4T_nb.ipynb  test_UFn.py  test_utils.py
ufdn/: __init__.py  __main__.py
ufdn/rd_data/: rd.db
ufdn/ufdnlib/: uconfig.py  ucrypt.py  udb.py  ufncli.py  utils.py
ufn/: __init__.py  __main__.py  ufn.py
utils/: utils.go  utils_test.go
