[package]
name = "fdn"
version = "0.8.5"
edition = "2021"
authors = ["Marks <ihobbymarks@gmail.com>"]
description = "A tool for uniformly change file or directory names and support rollback these operations"
readme = "README.md"
homepage = "https://github.com/hobbymarks/fdn/"
repository = "https://github.com/hobbymarks/fdn/"
license = "MIT OR Apache-2.0"
keywords = ["file", "directory", "rollback"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "env"] }
difference = "2.0.0"
directories = "5.0.1"
regex = "1.10.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-crypto = "0.2.36"
rustc-serialize = "0.3.25"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-width = "0.1.13"
unicode_names2 = "1.2.2"
walkdir = "2.5.0"
winapi = "0.3.9"

[build-dependencies]
git2 = "0.19.0"
